--- a/ProjectRakshak/src/resources/UserDashboard.fxml
+++ b/ProjectRakshak/src/resources/UserDashboard.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.UserDashboardController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserDashboardController">
+   <children>
+      <HBox prefHeight="23.0" prefWidth="800.0">
+         <children>
+            <ToolBar prefHeight="36.0" prefWidth="519.0">
+              <items>
+                <Button mnemonicParsing="false" prefHeight="14.0" prefWidth="70.0" text="Account" />
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="History" />
+                  <Button mnemonicParsing="false" text="Schedule" />
+                  <Button mnemonicParsing="false" text="Contacts" />
+              </items>
+            </ToolBar>
+            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="36.0" prefWidth="283.0">
+              <items>
+                  <Button mnemonicParsing="false" text="Exit" />
+                <Button mnemonicParsing="false" text="Logout" />
+              </items>
+            </ToolBar>
+         </children>
+      </HBox>
+      <Label alignment="CENTER" layoutX="121.0" layoutY="35.0" prefHeight="34.0" prefWidth="525.0" text="Welcome">
+         <font>
+            <Font name="Bell MT" size="30.0" />
+         </font>
+      </Label>
+      <Button layoutX="176.0" layoutY="172.0" mnemonicParsing="false" text="Book An Appointment" />
+      <Button layoutX="471.0" layoutY="172.0" mnemonicParsing="false" text="Check Bed Availability" />
+      <Button layoutX="185.0" layoutY="287.0" mnemonicParsing="false" text="Access Blood Bank" />
+      <Button layoutX="475.0" layoutY="287.0" mnemonicParsing="false" text="Register Vaccination" />
+      <Button layoutX="492.0" layoutY="397.0" mnemonicParsing="false" text="Medical Store" />
+      <Button layoutX="182.0" layoutY="397.0" mnemonicParsing="false" text="Access Plasma Bank" />
+   </children>
 </AnchorPane>
