--- a/ProjectRakshak/src/resources/AdminDashboard.fxml
+++ b/ProjectRakshak/src/resources/AdminDashboard.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller= "controllers.AdminDashboardController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminDashboardController">
+   <children>
+      <ToolBar prefHeight="40.0" prefWidth="574.0">
+        <items>
+          <Button mnemonicParsing="false" text="Button" />
+        </items>
+      </ToolBar>
+      <Label fx:id="welcomeLabel" alignment="CENTER" layoutX="173.0" layoutY="40.0" prefHeight="30.0" prefWidth="454.0" text="Welcome">
+         <font>
+            <Font name="Times New Roman Italic" size="26.0" />
+         </font>
+      </Label>
+      <Button fx:id="registerStaffButton" layoutX="351.0" layoutY="129.0" mnemonicParsing="false" text="Register A Staff" />
+      <ToolBar layoutX="574.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="227.0">
+        <items>
+          <Button fx:id="exitButton" mnemonicParsing="false" text="Exit" />
+            <Button fx:id="logoutButton" mnemonicParsing="false" text="Logout" />
+        </items>
+      </ToolBar>
+   </children>
 </AnchorPane>
