FXML for admin Register added

--- a/ProjectRakshak/src/resources/AdminRegister.fxml
+++ b/ProjectRakshak/src/resources/AdminRegister.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.AdminRegisterController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminRegisterController">
+   <children>
+      <TabPane layoutY="34.0" prefHeight="567.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="staffTab" closable="false" text="Register A Staff Member">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+          <Tab fx:id="doctorTab" closable="false" text="Register A Doctor">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+            <Tab fx:id="adminTab" closable="false" text="Register An Admin">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+      <ToolBar layoutY="-2.0" prefHeight="18.0" prefWidth="562.0">
+        <items>
+          <Button mnemonicParsing="false" text="Go Back" />
+        </items>
+      </ToolBar>
+      <ToolBar layoutX="562.0" layoutY="-2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="0.0" prefWidth="238.0">
+        <items>
+          <Button mnemonicParsing="false" text="Exit" />
+            <Button mnemonicParsing="false" text="Logout" />
+        </items>
+      </ToolBar>
+   </children>
 </AnchorPane>
