--- a/ProjectRakshak/src/resources/AdminRegister.fxml
+++ b/ProjectRakshak/src/resources/AdminRegister.fxml
@@ -62,15 +62,17 @@
                         <Label layoutX="250.0" layoutY="260.0" text="Experience" />
                         <TextField fx:id="educationFieldDoctor" layoutX="372.0" layoutY="290.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="250.0" layoutY="294.0" text="Education" />
-                        <Label layoutX="250.0" layoutY="406.0" text="Password" />
-                        <Label layoutX="250.0" layoutY="432.0" text="Reenter" />
-                        <PasswordField fx:id="passwordFieldDoctor" layoutX="372.0" layoutY="403.0" prefHeight="26.0" prefWidth="202.0" />
-                        <PasswordField fx:id="rePasswordFieldDoctor" layoutX="372.0" layoutY="427.0" prefHeight="26.0" prefWidth="202.0" />
-                        <Button fx:id="registerDoctorButton" layoutX="359.0" layoutY="460.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
+                        <Label layoutX="250.0" layoutY="430.0" text="Password" />
+                        <Label layoutX="250.0" layoutY="456.0" text="Reenter" />
+                        <PasswordField fx:id="passwordFieldDoctor" layoutX="372.0" layoutY="427.0" prefHeight="26.0" prefWidth="202.0" />
+                        <PasswordField fx:id="rePasswordFieldDoctor" layoutX="372.0" layoutY="451.0" prefHeight="26.0" prefWidth="202.0" />
+                        <Button fx:id="registerDoctorButton" layoutX="359.0" layoutY="484.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
                         <TextField fx:id="baseSalaryFieldDoctor" layoutX="372.0" layoutY="324.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="250.0" layoutY="329.0" text="Base Salary" />
                         <TextField fx:id="gradePayFieldDoctor" layoutX="372.0" layoutY="362.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="250.0" layoutY="366.0" text="Grade Pay" />
+                        <TextField fx:id="cabinNumberFieldDoctor" layoutX="371.0" layoutY="396.0" prefHeight="26.0" prefWidth="203.0" />
+                        <Label layoutX="251.0" layoutY="400.0" text="Assign Cabin Number" />
                      </children>
                   </AnchorPane>
                </content>
