--- a/ProjectRakshak/src/resources/AdminRegister.fxml
+++ b/ProjectRakshak/src/resources/AdminRegister.fxml
@@ -37,7 +37,7 @@
                         <Label layoutX="250.0" layoutY="355.0" text="Reenter" />
                         <PasswordField fx:id="passwordField" layoutX="372.0" layoutY="326.0" prefHeight="26.0" prefWidth="202.0" />
                         <PasswordField fx:id="rePasswordField" layoutX="372.0" layoutY="350.0" prefHeight="26.0" prefWidth="202.0" />
-                        <Button fx:id="registerStaffButton" layoutX="358.0" layoutY="400.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
+                        <Button fx:id="registerStaffButton" onAction="#onRegisterButtonClicked" layoutX="358.0" layoutY="400.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
                      </children>
                   </AnchorPane>
             </content>
@@ -66,12 +66,12 @@
                         <Label layoutX="250.0" layoutY="456.0" text="Reenter" />
                         <PasswordField fx:id="passwordFieldDoctor" layoutX="372.0" layoutY="427.0" prefHeight="26.0" prefWidth="202.0" />
                         <PasswordField fx:id="rePasswordFieldDoctor" layoutX="372.0" layoutY="451.0" prefHeight="26.0" prefWidth="202.0" />
-                        <Button fx:id="registerDoctorButton" layoutX="359.0" layoutY="484.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
+                        <Button fx:id="registerDoctorButton" onAction="#onRegisterButtonClicked" layoutX="359.0" layoutY="484.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
                         <TextField fx:id="baseSalaryFieldDoctor" layoutX="372.0" layoutY="324.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="250.0" layoutY="329.0" text="Base Salary" />
                         <TextField fx:id="gradePayFieldDoctor" layoutX="372.0" layoutY="362.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="250.0" layoutY="366.0" text="Grade Pay" />
-                        <TextField fx:id="cabinNumberFieldDoctor" layoutX="371.0" layoutY="396.0" prefHeight="26.0" prefWidth="203.0" />
+                        <TextField fx:id="cabinNumberField" layoutX="371.0" layoutY="396.0" prefHeight="26.0" prefWidth="203.0" />
                         <Label layoutX="251.0" layoutY="400.0" text="Assign Cabin Number" />
                      </children>
                   </AnchorPane>
@@ -101,7 +101,7 @@
                         <Label layoutX="250.0" layoutY="355.0" text="Reenter" />
                         <PasswordField fx:id="passwordFieldAdmin" layoutX="372.0" layoutY="326.0" prefHeight="26.0" prefWidth="202.0" />
                         <PasswordField fx:id="rePasswordFieldAdmin" layoutX="372.0" layoutY="350.0" prefHeight="26.0" prefWidth="202.0" />
-                        <Button fx:id="registerAdminButton" layoutX="358.0" layoutY="400.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
+                        <Button fx:id="registerAdminButton" onAction="#onRegisterButtonClicked" layoutX="358.0" layoutY="400.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Register" />
                      </children>
                   </AnchorPane>
                </content>
