--- a/ProjectRakshak/src/resources/UserDashboard.fxml
+++ b/ProjectRakshak/src/resources/UserDashboard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserDashboardController">
+<AnchorPane fx:id="primaryPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UserDashboardController">
    <children>
       <HBox prefHeight="23.0" prefWidth="800.0">
          <children>
