--- a/ProjectRakshak/src/resources/StaffDashboard.fxml
+++ b/ProjectRakshak/src/resources/StaffDashboard.fxml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane fx:id="primaryPane" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.StaffDashboardController"
-            prefHeight="600.0" prefWidth="800.0">
+<AnchorPane fx:id="primaryPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StaffDashboardController">
     <children>
         <HBox prefHeight="23.0" prefWidth="800.0">
             <children>
                 <ToolBar prefHeight="36.0" prefWidth="519.0">
                     <items>
-                        <Button fx:id="accountButton" mnemonicParsing="false" prefHeight="14.0" prefWidth="70.0" text="Account" />
-                        <Button fx:id="payManagerButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="PayManager" />
-                        <Button fx:id="scheduleButton" mnemonicParsing="false" text="Schedule" />
-                        <Button fx:id="contactButton" mnemonicParsing="false" text="Contacts" />
+                        <Button fx:id="accountButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" prefHeight="14.0" prefWidth="70.0" text="Account" />
+                        <Button fx:id="payManagerButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" prefHeight="26.0" prefWidth="86.0" text="PayManager" />
+                        <Button fx:id="scheduleButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" text="Schedule" />
+                        <Button fx:id="contactButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" text="Contacts" />
                     </items>
                 </ToolBar>
                 <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="36.0" prefWidth="283.0">
                     <items>
-                        <Button fx:id="exitButton" mnemonicParsing="false" text="Exit" />
-                        <Button fx:id="logoutButton" mnemonicParsing="false" text="Logout" />
+                        <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" text="Exit" />
+                        <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onToolBarButtonClicked" text="Logout" />
                     </items>
                 </ToolBar>
             </children>
         </HBox>
+      <Label fx:id="dateLabel" layoutX="218.0" layoutY="51.0" text="Date" />
+      <Button fx:id="attendanceButton" layoutX="337.0" layoutY="47.0" mnemonicParsing="false" text="Mark Attendance" />
+      <ListView fx:id="staffScheduleList" layoutX="150.0" layoutY="138.0" prefHeight="351.0" prefWidth="530.0" />
     </children>
 
 </AnchorPane>
