idk what is this

--- a/ProjectRakshak/src/resources/TimeTableDialog.fxml
+++ b/ProjectRakshak/src/resources/TimeTableDialog.fxml
@@ -4,14 +4,15 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" fx:id="primaryPane" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimeTableDialogController">
+<AnchorPane fx:id="primaryPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimeTableDialogController">
    <children>
       <TableView fx:id="doctorTableView" prefHeight="390.0" prefWidth="600.0">
         <columns>
           <TableColumn fx:id="doctorColumn" prefWidth="136.0" text="Doctor" />
             <TableColumn fx:id="fieldColumn" minWidth="0.0" prefWidth="197.60003662109375" text="Field" />
-          <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="194.39996337890625" text="Time" />
-            <TableColumn fx:id="availableColumn" prefWidth="70.4000244140625" text="Available" />
+            <TableColumn fx:id="startTimeColumn" prefWidth="104.0" text="Start Time" />
+          <TableColumn fx:id="endTimeColumn" minWidth="0.0" prefWidth="84.79998779296875" text="End Time" />
+            <TableColumn fx:id="availableColumn" prefWidth="76.800048828125" text="Available" />
         </columns>
       </TableView>
    </children>
