Prior Checks added

--- a/ProjectRakshak/src/resources/BookAppointmentDialog.fxml
+++ b/ProjectRakshak/src/resources/BookAppointmentDialog.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="primaryPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BookAppointmentController">
    <children>
-      <ComboBox fx:id="doctorBox" onAction="#onDoctorSelected" layoutX="152.0" layoutY="70.0" prefHeight="26.0" prefWidth="416.0" promptText="Select Doctor" />
-      <ComboBox fx:id="slotBox" layoutX="152.0" layoutY="143.0" prefWidth="150.0" promptText="Select Shift" />
-      <DatePicker fx:id="datePicker" layoutX="152.0" layoutY="212.0" promptText="Date For Appointment" />
+      <ComboBox fx:id="doctorBox" layoutX="152.0" layoutY="70.0" onAction="#onDoctorSelected" prefHeight="26.0" prefWidth="416.0" promptText="Select Doctor" />
+      <ComboBox fx:id="slotBox" layoutX="152.0" layoutY="143.0" onAction="#onSlotSelected" prefWidth="150.0" promptText="Select Shift" />
+      <DatePicker fx:id="datePicker" layoutX="152.0" layoutY="212.0" onAction="#onDateSelected" promptText="Date For Appointment" />
       <Label layoutX="59.0" layoutY="75.0" text="Doctor" />
       <Label layoutX="59.0" layoutY="147.0" text="Shift" />
       <Label layoutX="59.0" layoutY="216.0" text="Date" />
-      <Label fx:id="statusLabel" alignment="CENTER" layoutX="91.0" layoutY="284.0" prefHeight="18.0" prefWidth="359.0" text="Status Label">
+      <Label fx:id="statusLabel" alignment="CENTER" layoutX="79.0" layoutY="262.0" prefHeight="122.0" prefWidth="471.0" text="Status Label">
          <font>
-            <Font name="Times New Roman Bold Italic" size="25.0" />
+            <Font name="Times New Roman Bold Italic" size="18.0" />
          </font>
       </Label>
    </children>
