--- a/ProjectRakshak/src/resources/StaffDashboard.fxml
+++ b/ProjectRakshak/src/resources/StaffDashboard.fxml
@@ -29,13 +29,13 @@
         </HBox>
       <Label fx:id="dateLabel" layoutX="218.0" layoutY="51.0" text="Date" />
       <Button fx:id="attendanceButton" layoutX="337.0" layoutY="47.0" mnemonicParsing="false" text="Mark Attendance" />
-      <TextField layoutX="143.0" layoutY="262.0" />
-      <TextField layoutX="143.0" layoutY="330.0" />
-      <TextField layoutX="143.0" layoutY="401.0" />
-      <TextField layoutX="143.0" layoutY="474.0" />
-      <TextField layoutX="466.0" layoutY="330.0" />
-      <TextField layoutX="466.0" layoutY="401.0" />
-      <TextField layoutX="466.0" layoutY="262.0" />
+      <TextField fx:id="staffIDField" layoutX="143.0" layoutY="262.0" />
+      <TextField fx:id="nameField" layoutX="143.0" layoutY="330.0" />
+      <TextField fx:id="emailField" layoutX="143.0" layoutY="401.0" />
+      <TextField fx:id="uidField" layoutX="143.0" layoutY="474.0" />
+      <TextField fx:id="titleField" layoutX="466.0" layoutY="330.0" />
+      <TextField fx:id="qrCodeField" layoutX="466.0" layoutY="401.0" />
+      <TextField fx:id="dateJoinedField" layoutX="466.0" layoutY="262.0" />
       <Label layoutX="60.0" layoutY="266.0" text="StaffID" />
       <Label layoutX="60.0" layoutY="405.0" text="Email" />
       <Label layoutX="60.0" layoutY="334.0" text="Name" />
@@ -43,8 +43,11 @@
       <Label layoutX="377.0" layoutY="266.0" text="Date Joined" />
       <Label layoutX="377.0" layoutY="334.0" text="Title" />
       <Label layoutX="377.0" layoutY="405.0" text="QR Code" />
-      <Button layoutX="383.0" layoutY="474.0" mnemonicParsing="false" text="Edit Details" />
-      <Button layoutX="495.0" layoutY="474.0" mnemonicParsing="false" text="Change Password" />
+      <Button fx:id="editDetailsButton" onAction="#onEditClicked" layoutX="244.0" layoutY="544.0" mnemonicParsing="false" text="Edit Details" />
+        <Button fx:id="doneButton" onAction="#onDoneClicked" layoutX="244.0" layoutY="544.0" mnemonicParsing="false" text="Done" />
+      <Button fx:id="changePasswordButton" layoutX="356.0" layoutY="544.0" mnemonicParsing="false" text="Change Password" />
+      <TextField fx:id="phoneNumberField" layoutX="460.0" layoutY="483.0" />
+      <Label layoutX="377.0" layoutY="487.0" text="Phone Number" />
     </children>
 
 </AnchorPane>
