--- a/ProjectRakshak/src/resources/BedViewDialog.fxml
+++ b/ProjectRakshak/src/resources/BedViewDialog.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BedViewController">
+<AnchorPane fx:id="primaryPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BedViewController">
    <children>
-      <TableView layoutX="73.0" layoutY="59.0" prefHeight="482.0" prefWidth="654.0">
+      <TableView fx:id="bedTableView" layoutX="73.0" layoutY="59.0" prefHeight="482.0" prefWidth="654.0">
         <columns>
-            <TableColumn editable="false" prefWidth="86.4000244140625" text="Bed Number" />
-          <TableColumn editable="false" prefWidth="152.0" text="Bed Type" />
-          <TableColumn editable="false" prefWidth="104.79998779296875" text="Cabin Number" />
-            <TableColumn editable="false" prefWidth="105.60003662109375" text="Availability" />
-            <TableColumn editable="false" prefWidth="203.99997558593748" text="Occupied By" />
+            <TableColumn fx:id="bedNumberColumn" editable="false" prefWidth="86.4000244140625" text="Bed Number" />
+          <TableColumn fx:id="bedTypeColumn" editable="false" prefWidth="152.0" text="Bed Type" />
+          <TableColumn fx:id="cabinNumberColumn" editable="false" prefWidth="104.79998779296875" text="Cabin Number" />
+            <TableColumn fx:id="availableColumn" editable="false" prefWidth="105.60003662109375" text="Availability" />
+            <TableColumn fx:id="patientColumn" editable="false" prefWidth="203.99997558593748" text="Occupied By" />
         </columns>
       </TableView>
    </children>
