vaccination registration complete pt2

--- a/ProjectRakshak/src/resources/VaccinationBookDialog.fxml
+++ b/ProjectRakshak/src/resources/VaccinationBookDialog.fxml
@@ -11,10 +11,10 @@
    <children>
       <TextField fx:id="userUIDField" layoutX="400.0" layoutY="192.0" prefHeight="26.0" prefWidth="236.0" promptText="Aadhaar Number" />
       <ComboBox fx:id="vaccineBox" layoutX="400.0" layoutY="261.0" prefWidth="150.0" promptText="Vaccine" />
-      <ComboBox fx:id="doseBox" layoutX="400.0" layoutY="342.0" prefWidth="150.0" promptText="Dose Number" />
+<!--      <ComboBox fx:id="doseBox" layoutX="400.0" layoutY="342.0" prefWidth="150.0" promptText="Dose Number" />-->
       <Label layoutX="242.0" layoutY="197.0" text="Aadhaar Number" />
       <Label layoutX="242.0" layoutY="265.0" text="Vaccine" />
-      <Label layoutX="242.0" layoutY="346.0" text="Dose" />
+<!--      <Label layoutX="242.0" layoutY="346.0" text="Dose" />-->
       <Label layoutX="186.0" layoutY="74.0" prefHeight="40.0" prefWidth="221.0" text="Register For Vaccination. Date: ">
          <font>
             <Font name="Times New Roman" size="16.0" />
